--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test= "shoppinhList">Smartphone</li>
+		<li data-ns-test= "shoppinhList">laptop</li>
+		<li data-ns-test= "shoppinhList">camara</li>
+	</ol>
+	<ul>
+		<li data-ns-test= "holidayList">America</li>
+		<li data-ns-test= "holidayList">UK</li>
+		<li data-ns-test= "holidayList">Japan</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
