--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<ol>
-		<li data-ns-test= "shoppinhList">Smartphone</li>
-		<li data-ns-test= "shoppinhList">laptop</li>
-		<li data-ns-test= "shoppinhList">camara</li>
+		<li data-ns-test= "shoppingList">Smartphone</li>
+		<li data-ns-test= "shoppingList">laptop</li>
+		<li data-ns-test= "shoppingList">camara</li>
 	</ol>
 	<ul>
 		<li data-ns-test= "holidayList">America</li>
